[gd_scene load_steps=5 format=2]

[ext_resource path="res://MapSections/Walkway2x2.tscn" type="PackedScene" id=1]
[ext_resource path="res://IntroScene.gd" type="Script" id=4]
[ext_resource path="res://MapSections/Wall2x2.tscn" type="PackedScene" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.27017, 1, 1 )

[node name="IntroScene" type="Spatial"]
script = ExtResource( 4 )

[node name="StartPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.80231, 4.65539 )

[node name="Area_Medium" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.56099, -4.95361 )

[node name="CollisionShape" type="CollisionShape" parent="Area_Medium"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.46304 )
shape = SubResource( 1 )

[node name="Area_Small" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 2.56099, -4.95361 )

[node name="CollisionShape" type="CollisionShape" parent="Area_Small"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.46304 )
shape = SubResource( 1 )

[node name="Area_Large" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 2.56099, -4.95361 )

[node name="CollisionShape" type="CollisionShape" parent="Area_Large"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.46304 )
shape = SubResource( 1 )

[node name="Walkway2x2" parent="." instance=ExtResource( 1 )]

[node name="Walkway2x3" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )

[node name="Walkway2x4" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -4 )

[node name="Walkway2x5" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )

[node name="Walkway2x6" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -4 )

[node name="Walkway2x7" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )

[node name="Walkway2x8" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )

[node name="Wall2x2" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8 )

[node name="Wall2x3" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -8 )

[node name="Wall2x4" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -8 )

[node name="Wall2x5" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -4 )

[node name="Wall2x6" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -4 )

[node name="Wall2x7" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0 )

[node name="Wall2x8" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0 )

[node name="Wall2x9" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 4 )

[node name="Wall2x10" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 4 )

[node name="Wall2x11" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8 )

[connection signal="body_entered" from="Area_Medium" to="." method="_on_Area_Medium_body_entered"]
[connection signal="body_entered" from="Area_Small" to="." method="_on_Area_Small_body_entered"]
[connection signal="body_entered" from="Area_Large" to="." method="_on_Area_Large_body_entered"]
